--- a/pngview/Makefile
+++ b/pngview/Makefile
@@ -2,8 +2,8 @@ OBJS=pngview.o ../common/backgroundLayer.o ../common/imageLayer.o \
 	 ../common/loadpng.o ../common/image.o ../common/key.o
 BIN=pngview
 
-CFLAGS+=-Wall -g -O3 -I../common
-LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm -L/usr/local/lib -lpng
+CFLAGS+=-Wall -g -O3 -I../common $(shell libpng-config --cflags)
+LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm $(shell libpng-config --ldflags)
 
 INCLUDES+=-I/opt/vc/include/ -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux
 
