--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ life/life
 mandelbrot/mandelbrot
 pngview/pngview
 radar_sweep/radar_sweep
+radar_sweep_alpha/radar_sweep_alpha
 rgb_triangle/rgb_triangle
 spriteview/spriteview
 test_pattern/test_pattern
