Added threads to test multicore Raspberry Pi 2

--- a/life/Makefile
+++ b/life/Makefile
@@ -14,7 +14,7 @@ all: $(BIN)
 	$(CC) $(CFLAGS) $(INCLUDES) -g -c $< -o $@ -Wno-deprecated-declarations
 
 $(BIN): $(OBJS)
-	$(CC) -o $@ -Wl,--whole-archive $(OBJS) $(LDFLAGS) -Wl,--no-whole-archive -rdynamic
+	$(CC) -o $@ -Wl,--whole-archive $(OBJS) $(LDFLAGS) -pthread -Wl,--no-whole-archive -rdynamic
 
 clean:
 	@rm -f $(OBJS)
