--- a/offscreen/Makefile
+++ b/offscreen/Makefile
@@ -1,9 +1,8 @@
-OBJS=pngresize.o ../common/loadpng.o ../common/savepng.o \
-	../common/image.o resizeDispmanX.o
+OBJS=pngresize.o resizeDispmanX.o
 BIN=pngresize
 
 CFLAGS+=-Wall -g -O3 -I../common $(shell libpng-config --cflags)
-LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm $(shell libpng-config --ldflags)
+LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm $(shell libpng-config --ldflags) -L../lib -lraspidmx
 
 INCLUDES+=-I/opt/vc/include/ -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux
 
