--- a/pngview/Makefile
+++ b/pngview/Makefile
@@ -1,9 +1,8 @@
-OBJS=pngview.o ../common/backgroundLayer.o ../common/imageLayer.o \
-	 ../common/loadpng.o ../common/image.o ../common/key.o
+OBJS=pngview.o
 BIN=pngview
 
 CFLAGS+=-Wall -g -O3 -I../common $(shell libpng-config --cflags)
-LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm $(shell libpng-config --ldflags)
+LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm $(shell libpng-config --ldflags) -L../lib -lraspidmx
 
 INCLUDES+=-I/opt/vc/include/ -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux
 
