--- a/radar_sweep/Makefile
+++ b/radar_sweep/Makefile
@@ -1,8 +1,8 @@
-OBJS=radar_sweep.o ../common/image.o ../common/imagePalette.o ../common/key.o
+OBJS=radar_sweep.o
 BIN=radar_sweep
 
 CFLAGS+=-Wall -O3 -g -I../common
-LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm
+LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm -L../lib -lraspidmx
 
 INCLUDES+=-I/opt/vc/include/ -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux
 
