--- a/test_pattern/Makefile
+++ b/test_pattern/Makefile
@@ -1,8 +1,8 @@
-OBJS=test_pattern.o ../common/key.o
+OBJS=test_pattern.o
 BIN=test_pattern
 
 CFLAGS+=-Wall -g -O3 -I../common
-LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm
+LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm -L../lib -lraspidmx
 
 INCLUDES+=-I/opt/vc/include/ -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux
 
