switch to "pkg-config"
I get a build error saying:

	ERROR: /usr/bin/libpng16-config should not be used, use an alternative such as pkg-config

Therefore switch to the more common and more generic "pkg-config" instead of
using a libpng-specific tool for flags and libraries.

Signed-off-by: Trevor Woerner <twoerner@gmail.com>

--- a/mandelbrot/Makefile
+++ b/mandelbrot/Makefile
@@ -1,8 +1,8 @@
 OBJS=main.o mandelbrot.o info.o
 BIN=mandelbrot
 
-CFLAGS+=-Wall -g -O3 -I../common $(shell libpng-config --cflags)
-LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm $(shell libpng-config --ldflags) -L../lib -lraspidmx -lraspidmxPng
+CFLAGS+=-Wall -g -O3 -I../common $(shell pkg-config --cflags libpng)
+LDFLAGS+=-L/opt/vc/lib/ -lbcm_host -lm $(shell pkg-config --libs libpng) -L../lib -lraspidmx -lraspidmxPng
 
 INCLUDES+=-I/opt/vc/include/ -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux
 
